[gd_scene load_steps=5 format=2]

[ext_resource path="res://ChangeDVDv3.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/Scaffolds/ChangeDVDScaffold.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/Scaffolds/ChangeDVDpopupOption.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/AreYouSureDialog.tscn" type="PackedScene" id=7]

[node name="ChangeDVDv3" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChangeDVDScaffold" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="ChangeDVDpopupOption" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="AreYouSureDialog" parent="CanvasLayer" instance=ExtResource( 7 )]
[connection signal="PressMenuButton" from="CanvasLayer/ChangeDVDScaffold" to="." method="_on_ChangeDVDScaffold_PressMenuButton"]
[connection signal="ExtrasButton" from="CanvasLayer/ChangeDVDpopupOption" to="." method="_on_ChangeDVDpopupOption_ExtrasButton"]
[connection signal="SettingButton" from="CanvasLayer/ChangeDVDpopupOption" to="." method="_on_ChangeDVDpopupOption_SettingButton"]
[connection signal="ShutdownButton" from="CanvasLayer/ChangeDVDpopupOption" to="." method="_on_ChangeDVDpopupOption_ShutdownButton"]
[connection signal="NoImNotSure" from="CanvasLayer/AreYouSureDialog" to="." method="_on_AreYouSureDialog_NoImNotSure"]
[connection signal="YesImSure" from="CanvasLayer/AreYouSureDialog" to="." method="_on_AreYouSureDialog_YesImSure"]
